# whatwhat

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  dune-project  index.html  update_version.sh
.github/: pull_request_template.md
.github/workflows/: bottle-and-release.broken  bottle-and-release.yaml  bottle-and-release.yml  bump-brew-formula  bump-brew-formula.yaml  docs.yml  homebrew.yml
Whatwhat/Config/: index.html
Whatwhat/Domain/DateMap/: index.html
Whatwhat/Domain/FTE/: index.html
Whatwhat/Domain/StringMap/: index.html
Whatwhat/Forecast/: index.html
Whatwhat/Forecast/IntMap/: index.html
Whatwhat/Forecast/StringMap/: index.html
Whatwhat/ForecastExport/: index.html
Whatwhat/Github/: index.html
Whatwhat/GithubRaw/: index.html
Whatwhat/Notify/: index.html
Whatwhat/QueryReports/: index.html
Whatwhat/Slack/: index.html
Whatwhat/Utils/: index.html
lib/: allocation.ml  allocation.mli  config.ml  datePrinter.ml  dateprinter.ml  domain.ml  domain.mli  dune  forecast.ml  forecast.mli  forecastExport.ml  forecastExport.mli  forecastRaw.ml  forecastRaw.mli  github.ml  github.mli  githubBot.ml  githubBot.mli  githubRaw.ml  githubRaw.mli  githubRest.ml  githubTypes.ml  index.mld  jsonplay.ml  log.ml  log.mli  notify.ml  notify.mli  person.ml  person.mli  play.json  pretty.ml  project.ml  project.mli  queryReports.ml  queryReports.mli  query_reports.ml  reporting.mld  sample.json  schedule.ml  (+10 more)
queries/: issues-by-project-graphql.graphql  issues-by-project-graphql.json  users.graphql
test/: dune  gh.ml  gh_gql.ml  gh_rest.ml  utils.ml
wcwidth/: index.html  wcwidth.mli
wcwidth/Wcwidth/: index.html
whatwhat/: index.html  reporting.html
whatwhat/Whatwhat/: index.html
whatwhat/Whatwhat/Config/: index.html
whatwhat/Whatwhat/Domain/: index.html
whatwhat/Whatwhat/Domain/Assignment/: index.html
whatwhat/Whatwhat/Domain/DateMap/: index.html
whatwhat/Whatwhat/Domain/FTE/: index.html
whatwhat/Whatwhat/Domain/IntMap/: index.html
whatwhat/Whatwhat/Domain/State/: index.html
whatwhat/Whatwhat/Domain/StringMap/: index.html
whatwhat/Whatwhat/Forecast/: index.html
whatwhat/Whatwhat/Forecast/IntMap/: index.html
whatwhat/Whatwhat/Forecast/StringMap/: index.html
whatwhat/Whatwhat/ForecastExport/: index.html
whatwhat/Whatwhat/ForecastRaw/: index.html
whatwhat/Whatwhat/ForecastRaw/IntMap/: index.html
whatwhat/Whatwhat/Github/: index.html
whatwhat/Whatwhat/GithubRaw/: index.html
whatwhat/Whatwhat/Log/: index.html
whatwhat/Whatwhat/Notify/: index.html
whatwhat/Whatwhat/Notify/IntMap/: index.html
whatwhat/Whatwhat/Person/: index.html
whatwhat/Whatwhat/Pretty/: index.html
whatwhat/Whatwhat/Project/: index.html
whatwhat/Whatwhat/QueryReports/: index.html
whatwhat/Whatwhat/Schedule/: index.html
whatwhat/Whatwhat/Slack/: index.html
whatwhat/Whatwhat/SlackInternal/: index.html
whatwhat/Whatwhat/Utils/: index.html
