(library
 (name Whatwhat)
 (public_name whatwhat)
 (libraries
  xdg-basedir
  yojson
  lwt
  cohttp-lwt-unix
  calendar
  tyre
  tls
  batteries
  csv
  yaml
  ANSITerminal)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_yojson_conv)))

(documentation
 (package whatwhat)
 (mld_files index reporting))
