(library
 (name whatwhat)
 (public_name whatwhat)
 (libraries
  wcwidth
  xdg-basedir
  yojson
  lwt
  cohttp-lwt-unix
  calendar
  tyre
  tls
  csv
  yaml
  ANSITerminal)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_yojson_conv)))

(documentation
 (package whatwhat)
 (mld_files index reporting))
