(library
 (name whatwhat)
 (public_name whatwhat)
 (libraries
  wcwidth
  xdg-basedir
  yojson
  lwt
  lwt_ssl
  cohttp-lwt-unix
  calendar
  tyre
  csv
  yaml
  ANSITerminal)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_yojson_conv)))

(documentation
 (package whatwhat)
 (mld_files index reporting))
